<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Away Day</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="my_schedule">My Schedule</string>
    <string name="breakout">Breakout</string>
    <string name="home">Home</string>
    <string name="speakers">Speakers</string>
    <string name="videos">Videos</string>
    <string name="agenda">Agenda</string>
    <string name="days_to_go">Days to go</string>
    <string name="remaining">Remaining</string>
    <string name="celebration">Celebration</string>
    <string name="for_text">For</string>
    <string name="the_text">The</string>
    <string name="socialize">Socialize</string>
    <string name="maps">Maps</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="app_not_available">Not yet implemented</string>
    <string name="title_activity_push">PushActivity</string>
    <string name="title_twitter_webview">Twitter Login</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_tweets">#TWAwayDay2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="push_header">Push the notification</string>
    <string name="push">Push</string>
    <string name="playerview_text">Youtube Video</string>
    <string name="diplay_notification">Display Notification?</string>
    <string name="headerDetailsHeader">India Awayday, Hyderabad</string>
    <string name="headerDetailsMainText">CONNECTING THE DOTS</string>
    <string name="headerDetailsFooterDateText">19-21 September, 2014</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="tweets_login_info">Please login with your twitter account to tweet about awayday.</string>
    <string name="login">Login</string>
    <string name="tweet">Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="replace">Replace</string>
    <string name="preview">Preview</string>
    <string name="verifyPush">Are you sure you want to push the notification? This action can not be undone.</string>
    <string name="no_notifications_test">You have not received any notifications.</string>

    <string-array name="notification_type">
        <item>Info</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Sessions</item>
        <item>App Update</item>
    </string-array>


    <string name="presenters">Presenters:</string>
    <string name="rate_this_session_overall">Rate this session overall:</string>
    <string name="how_relevant_is_content">How relevant is the content:</string>
    <string name="speaker_quality">Speaker quality:</string>
    <string name="anything_else_to_say">Anything else you would like to say:</string>
    <string name="sessions">Sessions</string>
    <string name="tell_us">Tell us</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="session_details">Session Details</string>
    <string name="ask">Ask</string>
    <string name="speakers_details">Speakers</string>
    <string name="placeHolderTextLarge">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.
        \n      Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="questions">Questions</string>
    <string name="post">Post</string>
    <string name="send_notification">Send Notification</string>
    <string name="agenda_overlap_dialog_title">Schedule Overlap</string>

</resources>
