<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.twi.awayday2014.view.PushActivity">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/notification_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        float:fletFloatingHint="Title" />

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/notification_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        float:fletFloatingHint="Message"/>

    <Spinner
        android:id="@+id/notification_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/preview_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/padding_small"
        android:textColor="@android:color/white"
        android:background="#50a253"/>

    <Button
        android:id="@+id/push_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/padding_small"
        android:background="#50a253"
        android:textColor="@android:color/white"
        android:text="@string/push"/>

    <TextView
        android:id="@+id/warningMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:gravity="center"
        android:text="@string/verifyPush"
        android:visibility="gone"/>

</LinearLayout>
