<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.twi.awayday2014.customviews.ObservableScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_activity_header_height_without_countdown">

                <com.twi.awayday2014.customviews.KenBurnsView
                    android:id="@+id/header_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_activity_header_details_height"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/transparent_light_black"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/padding">

                        <TextView
                            android:id="@+id/headerDetailsHeaderText"
                            style="@style/HeaderDetailsTextView"
                            android:text="@string/headerDetailsHeader"
                            android:textSize="@dimen/home_activity_headerDetails_headerText_size" />

                        <View
                            style="@style/HorizontalDivider"
                            android:layout_width="@dimen/home_activity_headerDetails_big_divider_width"
                            android:layout_margin="@dimen/padding_small" />

                        <TextView
                            android:id="@+id/headerDetailsMainText"
                            style="@style/HeaderDetailsTextView"
                            android:padding="@dimen/padding_small"
                            android:text="@string/headerDetailsMainText"
                            android:textSize="@dimen/home_activity_headerDetails_mainText_size" />

                        <View
                            style="@style/HorizontalDivider"
                            android:layout_width="@dimen/home_activity_headerDetails_big_divider_width"
                            android:layout_margin="@dimen/padding_small" />

                        <TextView
                            android:id="@+id/headerDetailsFooterDate"
                            style="@style/HeaderDetailsTextView"
                            android:text="@string/headerDetailsFooterDateText"
                            android:textSize="@dimen/home_activity_headerDetails_headerText_size" />

                        <View
                            style="@style/HorizontalDivider"
                            android:layout_width="@dimen/home_activity_headerDetails_small_divider_width"
                            android:layout_margin="@dimen/padding_small" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/customActionbar"
                        android:layout_width="match_parent"
                        android:layout_height="?android:actionBarSize"
                        android:background="@color/transparent_black"
                        android:gravity="center_vertical">

                        <View
                            android:id="@+id/customActionbarBackgroundView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0"
                            android:background="@color/pink"/>

                        <TextView
                            android:id="@+id/selectedSectionText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="@dimen/padding"
                            android:gravity="center"
                            android:text="Agenda"
                            android:textColor="@android:color/white"
                            android:drawableLeft="@drawable/ic_agenda"
                            android:drawablePadding="@dimen/padding"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/notificationsButton"
                            style="@style/HeaderButton"
                            android:layout_marginRight="@dimen/padding"
                            android:layout_toLeftOf="@+id/twitterButton"
                            android:background="@drawable/ic_notifications" />

                        <Button
                            android:id="@id/twitterButton"
                            style="@style/HeaderButton"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="@dimen/padding"
                            android:layout_marginRight="@dimen/padding_extra_large"
                            android:background="@drawable/ic_twitter" />
                    </RelativeLayout>

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </com.twi.awayday2014.customviews.ObservableScrollView>

    <include
        android:id="@+id/left_drawer"
        layout="@layout/view_drawer" />

</android.support.v4.widget.DrawerLayout>